--- a/style.css
+++ b/style.css
@@ -6,4 +6,85 @@
 
 body {
   font-family: Roboto;
+  background-color: rgba(241,189,255,1);
+}
+
+/* Navbar section */
+
+nav {
+  background: rgb(241,189,255);
+  background: linear-gradient(0deg, rgba(241,189,255,1) 0%, rgba(175,0,224,1) 100%);
+}
+
+/* Form section */
+
+.form-container > form {
+  width: 50%;
+}
+
+.form-container > form > .row {
+  border: 2px solid rgba(175, 0, 224, 1);
+  border-radius: 5px;
+  padding: 10px;
+}
+
+#addButton {
+  position: relative;
+  overflow: hidden;
+  border: 2px solid rgba(175, 0, 224, 1);
+  transition: color 0.3s ease;
+}
+
+#addButton:hover {
+  color: rgba(175, 0, 224, 1);
+}
+
+#addButton::after,
+#addButton::before {
+  content: "";
+  width: 100%;
+  height: 50%;
+  background-color: white;
+  position: absolute;
+  transition: all 0.3s ease;
+  z-index: -1;
+}
+
+#addButton::after {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  bottom: 0;
+  left: 0;
+  transform: translateX(100%);
+}
+
+#addButton:hover::after {
+  transform: translateX(0);
+}
+
+#addButton::before {
+  top: 0;
+  left: 0;
+  transform: translateX(-100%);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+#addButton:hover::before {
+  transform: translateX(0);
+}
+
+
+.modal-header {
+  background: rgb(241,189,255);
+  background: linear-gradient(0deg, rgba(241,189,255,1) 0%, rgba(175,0,224,1) 100%);
+}
+
+.modal-body {
+  background-color: rgba(241,189,255,1);
+}
+
+.modal-footer {
+  background: rgb(241,189,255);
+  background: linear-gradient(180deg, rgba(241,189,255,1) 0%, rgba(175,0,224,1) 100%);
 }
