--- a/style.css
+++ b/style.css
@@ -6,85 +6,148 @@
 
 body {
   font-family: Roboto;
-  background-color: rgba(241,189,255,1);
+  background-color: #ecf0f1; /* Colore per il Body */
+  color: #333;
 }
 
 /* Navbar section */
 
 nav {
-  background: rgb(241,189,255);
-  background: linear-gradient(0deg, rgba(241,189,255,1) 0%, rgba(175,0,224,1) 100%);
+  background-color: #3498db;
+  color: white;
+  border-bottom: 2px solid white;
+  z-index: 1;
 }
 
 /* Form section */
 
-.form-container > form {
-  width: 50%;
-}
 
-.form-container > form > .row {
-  border: 2px solid rgba(175, 0, 224, 1);
+#form-container > form > .row, #form-detail-container > form > .row {
+  background-color: #3498db;
+  border: 2px solid white;
   border-radius: 5px;
   padding: 10px;
+  color: white;
+}
+
+#addon-wrapping {
+  width: fit-content;
+  padding: 0 5px;
+}
+
+#detail-container {
+  height: calc(100vh - 76px);
+  display: flex;
+  align-items: center;
 }
 
 #addButton {
+  color: #3498db;
   position: relative;
   overflow: hidden;
-  border: 2px solid rgba(175, 0, 224, 1);
+  border: 2px solid #3498db;
+  border-radius: 5px;
   transition: color 0.3s ease;
 }
 
 #addButton:hover {
-  color: rgba(175, 0, 224, 1);
+  color: white;
 }
 
 #addButton::after,
 #addButton::before {
   content: "";
-  width: 100%;
+  width: 110%;
   height: 50%;
-  background-color: white;
+  background-color: #3498db;
   position: absolute;
   transition: all 0.3s ease;
   z-index: -1;
 }
 
 #addButton::after {
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
   bottom: 0;
   left: 0;
   transform: translateX(100%);
 }
 
 #addButton:hover::after {
-  transform: translateX(0);
+  transform: translateX(-5%);
 }
 
 #addButton::before {
   top: 0;
-  left: 0;
+  right: 0;
   transform: translateX(-100%);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+
 }
 
 #addButton:hover::before {
-  transform: translateX(0);
+  transform: translateX(5%);
 }
 
+/* Card section */
 
-.modal-header {
-  background: rgb(241,189,255);
-  background: linear-gradient(0deg, rgba(241,189,255,1) 0%, rgba(175,0,224,1) 100%);
+.card {
+  border: 2px solid #3498db;
 }
 
-.modal-body {
-  background-color: rgba(241,189,255,1);
+.card img {
+  width: 100%;
+  height: 210px;
+  object-fit: cover;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
-.modal-footer {
-  background: rgb(241,189,255);
-  background: linear-gradient(180deg, rgba(241,189,255,1) 0%, rgba(175,0,224,1) 100%);
+.card-title {
+  text-transform: uppercase;
+  color: #3498db;
+}
+
+.card-brand {
+  text-transform: capitalize;
+  
+}
+
+.card-text {
+  font-style: italic;
+  height: 72px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+#product .card-text {
+  height: fit-content;
+  display: block;
+}
+
+@media screen and (min-width: 576px){
+  .card img {
+    border-bottom-left-radius: 0px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    height: 270px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  #edit-container {
+    height: calc(100vh - 76px);
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  #form-container > form {
+    width: 75%;
+  }
+}
+
+#updateAlert {
+  background-color: #3498db;
+  color: white;
 }
